fixup for event action menu overlapping

--- a/calendar/public/stylesheets/calendar-style.css
+++ b/calendar/public/stylesheets/calendar-style.css
@@ -234,6 +234,7 @@ table#month th.title {
 
 .event-menu li:hover ol {
 	display: block;
+	z-index: 100;
 }
 
 .event-menu li ol li ul {
